[tool.poetry]
name = "timermute"
version = "0.1.0"
description = ""
authors = ["shift <fantasy_world4423-git@yahoo.co.jp>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
coverage = "^7.3.2"
isort = "^5.12.0"
mock = "^5.0.1"
pycodestyle = "^2.11.1"
pysimplegui = "^4.60.5"
python = ">=3.11,<4"
sqlalchemy = "^2.0.23"
twitter-api-client = "^0.10.11"

[tool.isort]
multi_line_output = 9
line_length = 256

[tool.ruff.lint]
ignore = ["F401", "F541", "F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
