[tool.poetry]
name = "timermute"
version = "0.1.0"
description = ""
authors = ["shift <fantasy_world4423-git@yahoo.co.jp>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
coverage = "^7.4.0"
freezegun = "^1.4.0"
isort = "^5.13.2"
mock = "^5.0.1"
pycodestyle = "^2.11.1"
pysimplegui = "^4.60.5"
python = ">=3.11,<4"
ruff = "^0.1.11"
sqlalchemy = "^2.0.25"
twitter-api-client = "^0.10.16"

[tool.poetry.dev-dependencies]

[tool.isort]
line_length = 119
multi_line_output = 9

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]
line-length = 119

[tool.ruff.lint]
ignore = ["F401", "F541", "F841"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
